// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Person fails to update a user's attributes, without a current user 1`] = `
Object {
  "data": Object {
    "updateProfileField": Object {
      "firstName": "Richard",
      "id": "Person:057b0758543270d1cb21784cac4d3f5c",
    },
  },
}
`;

exports[`Person gets a single person when querying by root node 1`] = `
Object {
  "data": Object {
    "node": Object {
      "email": "isaac.hardy@newspring.cc",
      "firstName": "Isaac",
      "id": "Person:057b0758543270d1cb21784cac4d3f5c",
      "lastName": "Hardy",
      "nickName": "Isaac",
      "photo": Object {
        "uri": "https://apollosrock.newspring.cc:443/GetImage.ashx?guid=60fd5f35-3167-4c26-9a30-d44937287b87",
      },
    },
  },
}
`;

exports[`Person gets people by an email 1`] = `
Object {
  "data": Object {
    "people": Array [
      Object {
        "email": "isaac.hardy@newspring.cc",
        "firstName": "Isaac",
        "id": "Person:057b0758543270d1cb21784cac4d3f5c",
        "lastName": "Hardy",
        "nickName": "Isaac",
        "photo": Object {
          "uri": "https://apollosrock.newspring.cc:443/GetImage.ashx?guid=60fd5f35-3167-4c26-9a30-d44937287b87",
        },
      },
    ],
  },
}
`;

exports[`Person updates a user's attributes, if there is a current user 1`] = `
Object {
  "data": Object {
    "updateProfileField": Object {
      "firstName": "Richard",
      "id": "Person:057b0758543270d1cb21784cac4d3f5c",
    },
  },
}
`;

exports[`Person updates multiple fields 1`] = `
Object {
  "data": Object {
    "updateProfileFields": Object {
      "firstName": "Richard",
      "id": "Person:057b0758543270d1cb21784cac4d3f5c",
      "lastName": "Walkerton",
    },
  },
}
`;
